fix searchBar with on small devices

--- a/src/components/SearchBar/SearchBar.module.scss
+++ b/src/components/SearchBar/SearchBar.module.scss
@@ -14,6 +14,7 @@
       border: none;
       height: 40px;
       color: $secondary-text;
+      width: 100%;
       
       &:focus {
           outline: none;
